[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/Restart.png" type="Texture" id=1]
[ext_resource path="res://assets/GameOver.png" type="Texture" id=2]
[ext_resource path="res://game_over/game_over.gd" type="Script" id=3]
[ext_resource path="res://assets/TitleButton.png" type="Texture" id=4]
[ext_resource path="res://sound/game_over.wav" type="AudioStream" id=5]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 640, 320 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 640, 0, 640, 320 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 1280, 0, 640, 320 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 1920, 0, 640, 320 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 2560, 0, 640, 320 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 3200, 0, 640, 320 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 3840, 0, 640, 320 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 4.0
} ]

[node name="GameOver" type="CanvasLayer"]
pause_mode = 2
layer = 4
script = ExtResource( 3 )

[node name="GameOverPopup" type="Popup" parent="."]
visible = true
anchor_right = 0.745
anchor_bottom = 0.678
margin_right = 0.399902
margin_bottom = 0.09198
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="GameOverPopup"]
anchor_right = 1.002
anchor_bottom = 1.0
margin_right = 0.0919189
color = Color( 0.054902, 0.054902, 0.054902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="GameOverPopup/ColorRect"]
position = Vector2( 449.811, 172.485 )
scale = Vector2( 0.811496, 0.871024 )
frames = SubResource( 8 )
frame = 2
playing = true

[node name="TextureButton" type="TextureButton" parent="GameOverPopup/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 220.576
margin_top = 420.4
margin_right = -543.424
margin_bottom = -44.6004
texture_normal = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatGrid" type="GridContainer" parent="GameOverPopup/ColorRect"]
margin_left = 196.556
margin_top = 318.707
margin_right = 726.556
margin_bottom = 409.707
custom_constants/vseparation = 1
custom_constants/hseparation = 100
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CauseOfDeathLabel" type="Label" parent="GameOverPopup/ColorRect/StatGrid"]
margin_right = 218.0
margin_bottom = 14.0
text = "Cause of death:"

[node name="CauseOfDeathValue" type="Label" parent="GameOverPopup/ColorRect/StatGrid"]
margin_left = 318.0
margin_right = 419.0
margin_bottom = 14.0
text = "Eaten by goose"

[node name="TransportedLabel" type="Label" parent="GameOverPopup/ColorRect/StatGrid"]
margin_top = 15.0
margin_right = 218.0
margin_bottom = 29.0
text = "Passengers transported:"

[node name="TransportedValue" type="Label" parent="GameOverPopup/ColorRect/StatGrid"]
margin_left = 318.0
margin_top = 15.0
margin_right = 419.0
margin_bottom = 29.0
text = "0"

[node name="BalanceLabel" type="Label" parent="GameOverPopup/ColorRect/StatGrid"]
margin_top = 30.0
margin_right = 218.0
margin_bottom = 44.0
text = "Capitalism Units at point of death:"

[node name="BalanceValue" type="Label" parent="GameOverPopup/ColorRect/StatGrid"]
margin_left = 318.0
margin_top = 30.0
margin_right = 419.0
margin_bottom = 44.0
text = "0 (meaningless)"

[node name="TitleButton" type="TextureButton" parent="GameOverPopup/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 580.823
margin_top = 420.294
margin_right = -183.176
margin_bottom = -48.7064
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[connection signal="about_to_show" from="GameOverPopup" to="." method="_on_GameOverPopup_about_to_show"]
[connection signal="popup_hide" from="GameOverPopup" to="." method="_on_GameOverPopup_popup_hide"]
[connection signal="pressed" from="GameOverPopup/ColorRect/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="GameOverPopup/ColorRect/TitleButton" to="." method="_on_TitleButton_pressed"]
